# SuperJobParsing

./: LICENSE  README.md  names_algorythm.py  pyproject.toml
parser/superjob/: scrapy.cfg  vacancy.json
parser/superjob/superjob/: items.py  middlewares.py  pipelines.py  settings.py
parser/superjob/superjob/spiders/: .env.template  call_api.py  config.py  vacancies.py
